--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 imgSrc = 'assets/FOTOKURUS.webp';
             } else if (bmi < 24.9) {
                 message = 'Berat badan normal';
-                imgSrc = 'assets/FOTO_BADAN_NORMAL.webp';
+                imgSrc = 'assets/FOTO BADAN NNORMAL.webp';
             } else if (bmi < 29.9) {
                 message = 'GEMOY gendut';
                 imgSrc = 'assets/FOTOGENDUT.webp';
